--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                             <img class="mb-4" src="img/icons/icon-7.png" alt="Icon">
                             <h3 class="mb-3">Ukiran kayu, bata merah, batu putih, dan batu andesit</h3>
                             <p class="mb-4">Service 3</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="service3.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
@@ -260,7 +260,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                             <img class="mb-4" src="img/icons/icon-8.png" alt="Icon">
                             <h3 class="mb-3">Pembuatan ornamen cor, ornamen batu putih, dan andesit</h3>
                             <p class="mb-4">Service 4</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="service4.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
@@ -271,7 +271,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                             <img class="mb-4" src="img/icons/icon-9.png" alt="Icon">
                             <h3 class="mb-3">Vertikal garden, sungai buatan, air terjun buatan, & taman etnik</h3>
                             <p class="mb-4">Service 5</p>
-                            <a class="btn" href=""><i class="fa fa-plus text-primary me-3"></i>Read More</a>
+                            <a class="btn" href="service5.html"><i class="fa fa-plus text-primary me-3"></i>Read More</a>
                         </div>
                     </div>
                 </div>
