--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="text-primary m-0"><img src="img/icons/icon-1.png" alt="Icon">UD.MOJOPAHIT JAYA KONTRAKTOR</h1>
+            <h1 class="text-primary m-0"><img src="img/icons/icon-1.png" alt="Icon"> UD. MOJOPAHIT <br>JAYA KONTRAKTOR</h1>
         </a>
         
         
@@ -222,7 +222,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-1.jpg" alt="">
+                        <img class="bg-img" src="img/team-1.jpg" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-5.png" alt="Icon">
                             <h3 class="mb-3">Pembangunan Gapura, Pagar & Angkul-Angkul dengan motif Mojopahitan</h3>
@@ -233,7 +233,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-2.jpg" alt="">
+                        <img class="bg-img" src="img/carousel-10.jpg" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-6.png" alt="Icon">
                             <h3 class="mb-3">Pembangunan Joglo, Rumah Limasan, dan Pendopo Jati full ukir</h3>
@@ -266,7 +266,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="service-item d-flex position-relative text-center h-100">
-                        <img class="bg-img" src="img/service-5.jpg" alt="">
+                        <img class="bg-img" src="img/team-7.jpg" alt="">
                         <div class="service-text p-5">
                             <img class="mb-4" src="img/icons/icon-9.png" alt="Icon">
                             <h3 class="mb-3">Vertikal garden, sungai buatan, air terjun buatan, & taman etnik</h3>
@@ -362,7 +362,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-1.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/team-1.jpg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -380,7 +380,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-2.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/team-2.jpg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -398,7 +398,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-3.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/team-3.jpg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -416,7 +416,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                             <div class="row g-4">
                                 <div class="col-md-6" style="min-height: 350px;">
                                     <div class="position-relative h-100">
-                                        <img class="position-absolute img-fluid w-100 h-100" src="img/project-4.jpg"
+                                        <img class="position-absolute img-fluid w-100 h-100" src="img/team-4.jpg"
                                             style="object-fit: cover;" alt="">
                                     </div>
                                 </div>
@@ -481,7 +481,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid" src="img/team-3.jpg" alt="">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
@@ -497,7 +497,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-2.jpg" alt="">
+                            <img class="img-fluid" src="img/team-4.jpg" alt="">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
@@ -513,7 +513,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid" src="img/team-5.jpg" alt="">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
@@ -529,7 +529,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-2.jpg" alt="">
+                            <img class="img-fluid" src="img/team-6.jpg" alt="">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
@@ -545,7 +545,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt="">
+                            <img class="img-fluid" src="img/team-7.jpg" alt="">
                             <div class="team-social text-center">
                                 <a class="btn btn-square" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-square" href=""><i class="fab fa-twitter"></i></a>
