--- a/service1.html
+++ b/service1.html
@@ -68,7 +68,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="text-primary m-0"><img src="img/icons/icon-1.png" alt="Icon">UD.MOJOPAHIT JAYA KONTRAKTOR</h1>
+           <h1 class="text-primary m-0"><img src="img/icons/icon-1.png" alt="Icon"> UD. MOJOPAHIT <br>JAYA KONTRAKTOR</h1>
         </a>
         
         
@@ -151,7 +151,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="feature-img">
                         <img class="img-fluid" src="img/about-2.jpg" alt="">
-                        <img class="img-fluid" src="img/about-1.jpg" alt="">
+                        <img class="img-fluid" src="img/carousel-1.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -174,77 +174,77 @@
                             <img class="img-fluid" src="img/team-1.jpg" alt=""> 
                         </div>
                         <div class="bg-light text-center p-4">
-                            <span class="text-primary">Mulai 1,6JT</span>
+                            <!-- <span class="text-primary">Mulai 1,6JT</span> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt=""> 
+                            <img class="img-fluid" src="img/team-2.jpg" alt=""> 
                         </div>
                         <div class="bg-light text-center p-4">
-                            <span class="text-primary">Mulai 1,6JT</span>
+                            <!-- <span class="text-primary">Mulai 1,6JT</span> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt=""> 
+                            <img class="img-fluid" src="img/team-3.jpg" alt=""> 
                         </div>
                         <div class="bg-light text-center p-4">
-                            <span class="text-primary">Mulai 1,6JT</span>
+                            <!-- <span class="text-primary">Mulai 1,6JT</span> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt=""> 
+                            <img class="img-fluid" src="img/carousel-1.jpg" alt=""> 
                         </div>
                         <div class="bg-light text-center p-4">
-                            <span class="text-primary">Mulai 1,6JT</span>
+                            <!-- <span class="text-primary">Mulai 1,6JT</span> -->
                         </div>
                     </div>
                 </div>
                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt=""> 
+                            <img class="img-fluid" src="img/about-11.jpg" alt=""> 
                         </div>
                         <div class="bg-light text-center p-4">
-                            <span class="text-primary">Mulai 1,6JT</span>
+                            <!-- <span class="text-primary">Mulai 1,6JT</span> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt=""> 
+                            <img class="img-fluid" src="img/service-2.jpg" alt=""> 
                         </div>
                         <div class="bg-light text-center p-4">
-                            <span class="text-primary">Mulai 1,6JT</span>
+                            <!-- <span class="text-primary">Mulai 1,6JT</span> -->
                         </div>
                     </div>
                 </div>
                <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt=""> 
+                            <img class="img-fluid" src="img/service-8.jpg" alt=""> 
                         </div>
                         <div class="bg-light text-center p-4">
-                            <span class="text-primary">Mulai 1,6JT</span>
+                            <!-- <span class="text-primary">Mulai 1,6JT</span> -->
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <div class="position-relative">
-                            <img class="img-fluid" src="img/team-1.jpg" alt=""> 
+                            <img class="img-fluid" src="img/team-13.jpg" alt=""> 
                         </div>
                         <div class="bg-light text-center p-4">
-                            <span class="text-primary">Mulai 1,6JT</span>
+                            <!-- <span class="text-primary">Mulai 1,6JT</span> -->
                         </div>
                     </div>
                 </div>
