--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ Kami percaya bahwa warisan budaya bisa menjadi identitas yang kuat dalam pembang
                         </div>
                         <div class="bg-light text-center p-4">
                             <h3 class="mt-2">VERTIKAL GARDEN</h3>
-                            <span class="text-primary">Mulai 400px</span>
+                            <span class="text-primary">Mulai 4JT</span>
                         </div>
                     </div>
                 </div>
